--- a/BlazorEF.Server/Pages/NoteDelete.razor
+++ b/BlazorEF.Server/Pages/NoteDelete.razor
@@ -1,4 +1,5 @@
-﻿@page "/note/delete/{noteId:int}"
+﻿@*@page "/note/delete/{noteId:string}"*@
+@page "/note/delete"
 @using BlazorEF.Shared.Services
 @using BlazorEF.Shared.Models
 @inject INoteService NoteService
@@ -23,21 +24,24 @@
     </table>
 </div>
 <div class="form-group">
-    <input type="submit" value="Delete" @onclick="(async () => await RemoveNote(note.Id))" class="btn btn-danger" />
+    <input type="submit" value="Delete" @onclick="(async () => await RemoveNote(note.NoteId))" class="btn btn-danger" />
     <input type="submit" value="Cancel" @onclick="(() => Cancel())" class="btn btn-warning" />
 </div>
 
 @code {
-    [Parameter]
-    public int noteId { get; set; }
+    // [Parameter]
+    // public string noteId { get; set; }
+    
+    string noteId;
     NoteModel note = new NoteModel();
-
+    
     protected override async Task OnInitializedAsync()
     {
+        NavigationManager.TryGetQueryString<string>("noteId", out noteId);
         note = await NoteService.FindById(noteId);
     }
 
-    protected async Task RemoveNote(int noteId)
+    protected async Task RemoveNote(string noteId)
     {
         await NoteService.Delete(noteId);
         NavigationManager.NavigateTo("/notelist");
