--- a/BlazorEF.Server/Pages/NoteDelete.razor
+++ b/BlazorEF.Server/Pages/NoteDelete.razor
@@ -1,4 +1,5 @@
 ﻿@page "/note/delete"
+@using BlazorEF.Shared
 @using BlazorEF.Shared.Services
 @using BlazorEF.Shared.Models
 @inject INoteService NoteService
