--- a/BlazorEF.App/Shared/NavMenu.razor
+++ b/BlazorEF.App/Shared/NavMenu.razor
@@ -20,6 +20,11 @@
 			</NavLink>
 		</div>
 		@*<div class="nav-item px-3">
+			<NavLink class="nav-link" href="testpage">
+				<span class="oi oi-plus" aria-hidden="true"></span> Test
+			</NavLink>
+		</div>
+		<div class="nav-item px-3">
 			<NavLink class="nav-link" href="counter">
 				<span class="oi oi-plus" aria-hidden="true"></span> Counter
 			</NavLink>
