--- a/BlazorEF.Server/Shared/NavMenu.razor
+++ b/BlazorEF.Server/Shared/NavMenu.razor
@@ -19,6 +19,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Notes
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="testpage">
+                <span class="oi oi-plus" aria-hidden="true"></span> Test
+            </NavLink>
+        </div>
         @*<div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
