--- a/BlazorEF.App/Shared/NavMenu.razor
+++ b/BlazorEF.App/Shared/NavMenu.razor
@@ -15,8 +15,18 @@
 			</NavLink>
 		</div>
 		<div class="nav-item px-3">
+			<NavLink class="nav-link" href="/note/add">
+				<span class="oi oi-plus" aria-hidden="true"></span> Add
+			</NavLink>
+		</div>
+		<div class="nav-item px-3">
 			<NavLink class="nav-link" href="notelist">
-				<span class="oi oi-plus" aria-hidden="true"></span> Notes
+				<span class="oi oi-plus" aria-hidden="true"></span> List
+			</NavLink>
+		</div>
+		<div class="nav-item px-3">
+			<NavLink class="nav-link" href="notelistpaging">
+				<span class="oi oi-plus" aria-hidden="true"></span> Paging
 			</NavLink>
 		</div>
 		@*<div class="nav-item px-3">
