--- a/BlazorEF.App/Pages/NoteList.razor
+++ b/BlazorEF.App/Pages/NoteList.razor
@@ -51,8 +51,8 @@ else
                     <td>@note.Title</td>
                     <td>@note.Message.Truncate(50)</td>
                     <td>
-                        <a href='/note/edit?noteId=@note.NoteId' class="btn btn-outline-dark" role="button">Edit</a>
-                        <a href='/note/delete?noteId=@note.NoteId' class="btn btn-outline-danger" role="button">Delete</a>
+                        <a href='/note/edit?noteId=@note.NoteId' class="btn btn-primary" role="button">Edit</a>
+                        <a href='/note/delete?noteId=@note.NoteId' class="btn btn-danger" role="button">Delete</a>
                     </td>
                 </tr>
             }
