--- a/BlazorEF.App/Pages/NoteAdd.razor
+++ b/BlazorEF.App/Pages/NoteAdd.razor
@@ -27,7 +27,7 @@
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Save</button>
-        <a class="btn btn-light" href="/notelist">Cancel</a>
+        <a class="btn btn-dark" href="/notelist">Cancel</a>
     </div>
 </EditForm>
 
