--- a/BlazorEF.App/Pages/NoteDelete.razor
+++ b/BlazorEF.App/Pages/NoteDelete.razor
@@ -25,7 +25,7 @@
 </div>
 <div class="form-group">
     <input type="submit" value="Delete" @onclick="(async () => await RemoveNote(_note.NoteId))" class="btn btn-danger" />
-    <input type="submit" value="Cancel" @onclick="(Cancel)" class="btn btn-warning" />
+    <input type="submit" value="Cancel" @onclick="(Cancel)" class="btn btn-dark" />
 </div>
 
 @code {
